Essential token refresh and login issue